# apps-to-panel

./: .gitignore  README.md  dash.js  export-zip.sh  meson.build  metadata.json
